--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "msw": "^1.0.1",
+    "ofetch": "^1.0.1",
     "vite": "^4.1.2",
     "vitest": "^0.28.5"
   }
