--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "msw": "^1.0.1",
-    "ofetch": "^1.0.1",
-    "vite": "^4.1.2",
-    "vitest": "^0.28.5"
+    "msw": "^1.2.4",
+    "ofetch": "^1.3.3",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.3",
+    "vue": "^3.3.4"
   }
 }
