--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.3",
+    "@vue/test-utils": "^2.4.1",
     "happy-dom": "^10.11.0",
     "msw": "^1.2.4",
     "ofetch": "^1.3.3",
